# cs5760

./: .gitignore  README.md
2025-01-14/: lecnotes_macros.sty  notes.tex
2025-01-19/: notes.tex
2025-01-22/: notes.tex
assignments/des/: README.md  app.py  constants.py  ddt.py  keytab.c  pydes.py  recover.py  sbox.py  util.py
assignments/des/ddt/: s1.txt  s2.csv  s2.txt  s3.txt  s4.txt  s5.txt  s6.txt  s7.csv  s7.txt  s8.txt  s_box_0.csv  s_box_2.csv  s_box_3.csv  s_box_4.csv  s_box_5.csv  s_box_7.csv
assignments/des/oracle/: app.py  des.py  test_des.py
assignments/des/report/: references.bib  report.tex  report_macros.sty
assignments/des/report/artefacts/: output.txt
assignments/retracing-boomerang/: CMakeLists.txt  README.md
assignments/retracing-boomerang/include/: aes.hpp  constants.hpp  oracle.hpp  retracing_boomerang.hpp  utils.hpp  yoyo.hpp
assignments/retracing-boomerang/src/: CMakeLists.txt  aes.cpp  constants.cpp  main.py  requirements.txt  retracing_boomerang.cpp  utils.cpp  yoyo.cpp
assignments/retracing-boomerang/src/util/: __init__.py  aes.py  aes_constants.py  aes_types.py  test_aes.py  test_yoyo.py  yoyo.py
assignments/retracing-boomerang/tests/: CMakeLists.txt  test_aes.cpp  test_retracing_boomerang.cpp  test_retracing_boomerang_secret.cpp  test_yoyo.cpp  test_yoyo_fail.cpp  test_yoyo_pass.cpp
notes/2025-01-14/: notes.tex
notes/2025-01-19/: notes.tex
notes/2025-01-22/: lecnotes_macros.sty  notes.tex
notes/2025-01-27/: lecnotes_macros.sty  notes.tex
notes/2025-03-24/: notes.tex
notes/2025-03-26/: lecnotes_macros.sty  notes.tex
notes/2025-04-16/: lecnotes_macros.sty  notes.tex
notes/2025-06-24/: notes.tex
notes/2025-06-26/: notes.tex
notes/2025-07-03/: notes.tex
notes/2025-07-08/: lecnotes_macros.sty  notes.tex
presentations/2025-02-03/: presentation.tex  presentation_macros.sty
presentations/2025-04-21/: presentation.tex  presentation_macros.sty
presentations/2025-04-28/: presentation.tex  presentation_macros.sty
presentations/2025-07-21/: presentation.tex  presentation_macros.sty
presentations/2025-07-30/: presentation.tex  presentation_macros.sty  references.bib
